--- a/style.css
+++ b/style.css
@@ -210,9 +210,12 @@ header a {
     color: #000;
 }
 
+.burger {
+    display: none;
+}
+
 .burger_open {
     display: none;
-    transition: all .3s linear;
 }
 
 
